# lab-comp-arch

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  e97.s
src/include/: e97.h
tests/: CMakeLists.txt  test_1.c
